fix the problem of cytoscape not showing

--- a/web/src/main/webapp/css/ctd2.css
+++ b/web/src/main/webapp/css/ctd2.css
@@ -374,6 +374,10 @@ td.next-cell {
     width: 650px;
 }
 
+#cytoscape-container {
+    width: 95%;
+    height: 90%;
+}
 #cytoscape {
     width: 93%;
     height: 70%;
